Addded spinner and few changes

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -17,3 +17,8 @@ table tr td{
     padding: 10px;
     text-align: center;
 }
+.home{
+    background:#FFF9DE;
+    padding: 20px;
+    margin-top: 20px;
+}
