--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -28,14 +28,14 @@ span {
 
 .nav-link {
     text-decoration: none;
-    color: #595959;
+    color: white;
     font-size: 16px;
     font-weight: 500;
 }
 
 .title {
-    color: #656C73;
-    font-size: 16px;
+    color: white;
+    font-size: 20px;
     font-weight: 400;
     line-height: 20px;
 }
@@ -106,6 +106,7 @@ span {
 
 .navbar-wrapper {
     position: fixed!important;
+    background-color: #393646!important;
     top: 0;
     left: 0;
     width: 100%;
