--- a/src/Pages/Login/LoginForm.css
+++ b/src/Pages/Login/LoginForm.css
@@ -1,39 +1,128 @@
-form{
+.login{
+    display: flex;
+    height:100vh;
+    flex-direction:row-reverse;
+    align-items: center;
+    justify-content: center;
+}
+.right{
     width: 100%;
+    position: relative;
+    height: 100%;
+    background-color: #f5f5f5;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    padding: 10px;
-    border-radius: 10px;
+}
+.title{
+    display: flex; 
+    margin-bottom: 6rem;
+    font-size: 3rem;
+    font-weight: 700;
+    color: #000;
+}
+.left{
+    width: 100%;
+    height: 100%;
+    background-color: #f5f5f5;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+form{
+    width: 80%;
+    height: 80%;
     background-color: #fff;
-    box-shadow: 0 0 10px 0 rgba(0,0,0,0.2);
-    -webkit-box-shadow: 0 0 10px 0 rgba(0,0,0,0.2);
-    -moz-box-shadow: 0 0 10px 0 rgba(0,0,0,0.2);
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+form h1{
+    font-size: 2rem;
+    font-weight: 500;
+    color: #000;
+    margin-bottom: 1rem;
 }
 form input{
-    width: 100%;
-    padding: 10px;
-    margin: 10px;
+    width: 80%;
+    height: 3rem;
     border: 1px solid #000;
     border-radius: 5px;
-    outline: none;
+    margin-bottom: 2rem;
+    padding-left: 1rem;
+    font-size: 1rem;
+    font-weight: 500;
+    color: #000;
 }
 form button{
-    width: 100%;
-    padding: 10px;
-    margin: 10px;
+    width: 80%;
+    height: 3rem;
     border: none;
     border-radius: 5px;
-    outline: none;
-    background-color: #000;
+    margin-bottom: 1rem;
+    font-size: 1rem;
+    font-weight: 500;
     color: #fff;
+    background-color: #000;
     cursor: pointer;
 }
 form button:hover{
-    background-color: #fff;
+    cursor:pointer;
+    opacity: 0.8;
+}
+
+
+form{
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
+}
+label{
+    font-size: 1rem;
+    font-weight: 500;
     color: #000;
-    border: 1px solid #000;
+    margin-bottom: 0.5rem;
+}
+
+
+label{
+    width: 80%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+.password-field{
+    width:80%;
+    position: relative;
+}
+.password-field input{
+    width: 100%;
+    background-color: #fff;
+}
+.password-field i{
+    position: absolute;
+    right: 0;
+    top: 0;
+    margin-top: 15px;
+    margin-right: 1rem;  
+    cursor: pointer;
+}
+@media screen and (max-width: 768px){
+    .login{
+        flex-direction: column;
+    }
+    .right{
+        width: 100%;
+        height: 50%;
+    }
+    .left{
+        width: 100%;
+        height: 50%;
+    }
 }
